--- a/aprendizado-supervisionado.tex
+++ b/aprendizado-supervisionado.tex
@@ -1,8 +1,30 @@
 \section{Contexto}\label{cap:classificacao}
 
-\tar{vou introduzir classificação em um parágrafo}
+Aprendizado de máquina é a área que engloba algoritmos capazes de aprender
+sem programação explícita \citep{journals/cacm/Valiant84}.
+Diversas tarefas como \ano{tarefa 1, tarefa2, ... REFERENCIA} têm sido bem sucedidas atualmente.
+Entretanto, existe um problema em aberto que é a busca pela melhor maneira de amostragem dos dados
+na etapa que antecede o treinamento do algoritmo.
+A motivação para essa busca pode advir, dentre outras, de um excesso de dados
+ou da escassez de recursos para manutenção de um especialista.
+Ambos os casos podem se beneficiar do tipo de aprendizado denominado \textit{ativo}.
 
-\tar{conectar com AA e esboçar a tese em uma folha (desafios e soluções)}
+% Sistemas computacionais têm ajudado em tarefas cotidianas como tomada de decisão, recomendação de
+% filmes ou notícias e detecção de mensagens eletrônicas indesejáveis.
+% Elas são tarefas possíveis devido à existência de algoritmos capazes de aprender (Capítulo \ref{cap:classificacao}) e à abundância de dados disponíveis.
+% Porém,
+% a quantidade global desses dados duplica a cada dois anos \citep{zliobaite2012next} e, por isso, requer sistemas cada vez mais eficientes e que exijam intervenção humana mínima.
+% Nesse contexto surge o aprendizado de máquina ativo - tema de pesquisa deste documento.
+
+Aprendizado ativo é o estudo de algoritmos interativos que procuram fazer uso racional dos dados
+por meio de perguntas \citep{series/synthesis/2012Settles}.
+A pergunta do cenário mais comum na literatura é ``\textit{Qual é o rótulo do exemplo $\bm{x}$?}''.
+O problema de se decidir qual seria o melhor $\bm{x}$ é a
+motivação basilar desta tese.
+
+\ano{citar problemas? fadiga ...}
+
+\tar{ esboçar a tese em uma folha (desafios e soluções)}
 
 \tar{em outra página, vou deixar clara a principal contribuição:}
 
