--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -795,3 +795,47 @@ year = {2006}
   pages={55--66},
   year={2010}
 }
+
+@InProceedings{conf/icdm/OsugiKS05,
+  title =       "Balancing Exploration and Exploitation: {A} New
+                 Algorithm for Active Machine Learning",
+  author =      "Thomas Takeo Osugi and Kun Deng and Stephen D. Scott",
+  publisher =   "IEEE Computer Society",
+  year =        "2005",
+  bibdate =     "2014-09-17",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/conf/icdm/icdm2005.html#OsugiKS05",
+  booktitle =   "ICDM",
+  \crossref =    "conf/icdm/2005",
+  ISBN =        "0-7695-2278-5",
+  pages =       "330--337",
+  \URL =         "http://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=10470;
+                 http://www.computer.org/csdl/proceedings/icdm/2005/2278/00/index.html",
+}
+
+@Article{journals/jmlr/TongK01,
+  title =       "Support Vector Machine Active Learning with
+                 Applications to Text Classification",
+  author =      "Simon Tong and Daphne Koller",
+  journal =     "Journal of Machine Learning Research",
+  year =        "2001",
+  volume =      "2",
+  bibdate =     "2002-01-03",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/journals/jmlr/jmlr2.html#TongK01",
+  pages =       "45--66",
+  URL =         "http://www.ai.mit.edu/projects/jmlr/papers/volume2/tong01a/abstract.html",
+}
+
+@Article{journals/jmlr/BaramEL04,
+  title =       "Online Choice of Active Learning Algorithms",
+  author =      "Yoram Baram and Ran El-Yaniv and Kobi Luz",
+  journal =     "Journal of Machine Learning Research",
+  year =        "2004",
+  volume =      "5",
+  bibdate =     "2013-04-16",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/journals/jmlr/jmlr5.html#BaramEL04",
+  pages =       "255--291",
+  \URL =         "http://www.ai.mit.edu/projects/jmlr/papers/volume5/baram04a/baram04a.pdf",
+}
