--- a/macros.tex
+++ b/macros.tex
@@ -16,13 +16,14 @@
 \newcommand{\esb}[1]{\blue{#1}\xspace}
 \newcommand{\ano}[1]{\red{[$\star$ #1 $\star$]}\xspace}
 \newcommand{\tar}[1]{\green{$\star$ #1}\xspace}
-
+\newcommand{\versionspace}{espaço de versões\xspace}
 
 \newcommand{\ing}[2]{\emph{#1}\footnote{\textit{#2}}}
 \newcommand{\novo}[1]{\emph{#1}}
 \newcommand{\eer}{Redução do Erro Esperado\xspace}
-\newcommand{\elms}{Máquinas Extremas\xspace}
-\newcommand{\elm}{Máquina Extrema\xspace}
+\newcommand{\elms}{\textit{máquinas extremas}\xspace}
+\newcommand{\elm}{\textit{máquina extrema}\xspace}
+\newcommand{\svm}{máquina de vetores de suporte\xspace}
 
 \newcommand{\tarefa}[1] {\addcontentsline{toc}{section}{\tar{#1}}}
 
@@ -122,7 +123,6 @@
 \newcommand{\cbr}{\textsc{cbr}\xspace}
 \newcommand{\ilp}{\textsc{ilp}\xspace}
 
-\newcommand{\svm}{\textsc{svm}\xspace}
 
 
 
