--- a/tese.tex
+++ b/tese.tex
@@ -21,6 +21,8 @@
 \usepackage[ruled,linesnumbered,vlined]{algorithm2e}
 \usepackage{fancyhdr}
 
+\usepackage{ textcomp }
+
 %\renewcommand{\listalgorithmcfname}{Lista de Algoritmos}%
 %\renewcommand{\algorithmcfname}{Algoritmo}%
 \usepackage[english,brazil]{babel}
